# CLAP

./: pyproject.toml  requirements.txt
src/laion_clap/: hook.py
src/laion_clap/clap_module/: factory.py
