[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "laion_clap"
version = "1.1.4"
authors = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
maintainers = [
  { name="Ke Chen", email="knutchen@ucsd.edu" },
  { name="Yusong Wu" },
  { name="Tianyu Zhang" },
  { name="Yuchen Hui" }
]
description = "Contrastive Language-Audio Pretraining Model from LAION"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "soundfile",
  "librosa",
  "torchlibrosa",
  "wget",
  "scipy",
  "h5py",
  "scikit-learn",
  "pandas",
  "transformers",
  "webdataset",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]


[project.urls]
"Homepage" = "https://github.com/LAION-AI/CLAP"
"Bug Tracker" = "https://github.com/LAION-AI/CLAP/issues"